// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HTML converter builds basic portable text into HTML 1`] = `"<p><br/></p><p>text<a href=http://google.com"><strong>link</strong></a></p><p>text<a href=http://google.com"><strong>link</strong></a></p><h1>heading</h1><p><br/></p>"`;

exports[`HTML converter resolves a linked item 1`] = `"<p>resolved value of text_element: <strong>random text value</strong></p><p>text after component</p>"`;

exports[`HTML converter resolves a table 1`] = `"<p><br/></p><p><strong>Emil</strong></p><p>Cyril</p><ul><li>Jarda</li><li>Luda</li></ul><p>Cyril</p>"`;

exports[`HTML converter resolves an asset 1`] = `"<img src="https://assets-us-01.kc-usercontent.com:443/cec32064-07dd-00ff-2101-5bde13c9e30c/3594632c-d9bb-4197-b7da-2698b0dab409/Riesachsee_Dia_1_1963_%C3%96sterreich_16k_3063.jpg"></img>"`;

exports[`HTML converter resolves internal link 1`] = `"<p><a href="https://website.com/23f71096-fa89-4f59-a3f9-970e970944ec">item link</a></p>"`;

exports[`portable text transformer combines flattened blocks to a portable text 1`] = `
[
  {
    "_key": "guid",
    "_type": "block",
    "children": [
      {
        "_key": "guid",
        "_type": "span",
        "marks": [],
        "text": "text",
      },
    ],
    "markDefs": [],
    "style": "normal",
  },
]
`;

exports[`portable text transformer converts json to portable text array 1`] = `
[
  {
    "_key": "guid",
    "_type": "block",
    "children": [
      {
        "_key": "guid",
        "_type": "span",
        "marks": [],
        "text": "text",
      },
    ],
    "markDefs": [],
    "style": "normal",
  },
]
`;

exports[`portable text transformer parses complex rich text into portable text 1`] = `
[
  {
    "_key": "guid",
    "_type": "block",
    "children": [
      {
        "_key": "guid",
        "_type": "span",
        "marks": [],
        "text": "
",
      },
    ],
    "markDefs": [],
    "style": "normal",
  },
  {
    "_key": "guid",
    "_type": "block",
    "children": [
      {
        "_key": "guid",
        "_type": "span",
        "marks": [],
        "text": "text",
      },
      {
        "_key": "guid",
        "_type": "span",
        "marks": [
          "strong",
          "guid",
        ],
        "text": "link",
      },
    ],
    "markDefs": [
      {
        "_key": "guid",
        "_type": "link",
        "data-new-window": "true",
        "href": "http://google.com",
        "rel": "noopener noreferrer",
        "target": "_blank",
        "title": "linktitle",
      },
    ],
    "style": "normal",
  },
  {
    "_key": "guid",
    "_type": "block",
    "children": [
      {
        "_key": "guid",
        "_type": "span",
        "marks": [],
        "text": "heading",
      },
    ],
    "markDefs": [],
    "style": "h1",
  },
  {
    "_key": "guid",
    "_type": "block",
    "children": [
      {
        "_key": "guid",
        "_type": "span",
        "marks": [],
        "text": "
",
      },
    ],
    "markDefs": [],
    "style": "normal",
  },
]
`;

exports[`portable text transformer parses linked items/components 1`] = `
[
  {
    "_key": "guid",
    "_type": "component",
    "component": {
      "_ref": "test_item",
      "_type": "reference",
    },
  },
]
`;

exports[`portable text transformer transforms external links 1`] = `
[
  {
    "_key": "guid",
    "_type": "block",
    "children": [
      {
        "_key": "guid",
        "_type": "span",
        "marks": [],
        "text": "text",
      },
      {
        "_key": "guid",
        "_type": "span",
        "marks": [
          "guid",
        ],
        "text": "this is a",
      },
      {
        "_key": "guid",
        "_type": "span",
        "marks": [
          "strong",
          "guid",
        ],
        "text": "strong",
      },
      {
        "_key": "guid",
        "_type": "span",
        "marks": [
          "guid",
        ],
        "text": "link",
      },
    ],
    "markDefs": [
      {
        "_key": "guid",
        "_type": "link",
        "data-new-window": "true",
        "href": "http://google.com",
        "rel": "noopener noreferrer",
        "target": "_blank",
        "title": "linktitle",
      },
    ],
    "style": "normal",
  },
]
`;

exports[`portable text transformer transforms images 1`] = `
[
  {
    "_key": "guid",
    "_type": "image",
    "asset": {
      "_ref": "7d866175-d3db-4a02-b0eb-891fb06b6ab0",
      "_type": "reference",
      "url": "https://assets-eu-01.kc-usercontent.com:443/6d864951-9d19-0138-e14d-98ba886a4410/236ecb7f-41e3-40c7-b0db-ea9c2c44003b/sharad-bhat-62p19OGT2qg-unsplash.jpg",
    },
  },
  {
    "_key": "guid",
    "_type": "block",
    "children": [
      {
        "_key": "guid",
        "_type": "span",
        "marks": [
          "em",
        ],
        "text": "text in a paragraph",
      },
    ],
    "markDefs": [],
    "style": "normal",
  },
]
`;

exports[`portable text transformer transforms item links 1`] = `
[
  {
    "_key": "guid",
    "_type": "block",
    "children": [
      {
        "_key": "guid",
        "_type": "span",
        "marks": [
          "guid",
        ],
        "text": "text",
      },
      {
        "_key": "guid",
        "_type": "span",
        "marks": [
          "strong",
          "guid",
        ],
        "text": "link to an item",
      },
    ],
    "markDefs": [
      {
        "_key": "guid",
        "_type": "internalLink",
        "reference": {
          "_ref": "23f71096-fa89-4f59-a3f9-970e970944ec",
          "_type": "reference",
        },
      },
    ],
    "style": "normal",
  },
]
`;

exports[`portable text transformer transforms lists 1`] = `
[
  {
    "_key": "guid",
    "_type": "block",
    "children": [
      {
        "_key": "guid",
        "_type": "span",
        "marks": [],
        "text": "first level bullet",
      },
    ],
    "level": 1,
    "listItem": "bullet",
    "markDefs": [],
    "style": "normal",
  },
  {
    "_key": "guid",
    "_type": "block",
    "children": [
      {
        "_key": "guid",
        "_type": "span",
        "marks": [],
        "text": "first level bullet",
      },
    ],
    "level": 1,
    "listItem": "bullet",
    "markDefs": [],
    "style": "normal",
  },
  {
    "_key": "guid",
    "_type": "block",
    "children": [
      {
        "_key": "guid",
        "_type": "span",
        "marks": [],
        "text": "nested number in bullet list",
      },
    ],
    "level": 2,
    "listItem": "number",
    "markDefs": [],
    "style": "normal",
  },
  {
    "_key": "guid",
    "_type": "block",
    "children": [
      {
        "_key": "guid",
        "_type": "span",
        "marks": [],
        "text": "first level item",
      },
    ],
    "level": 1,
    "listItem": "number",
    "markDefs": [],
    "style": "normal",
  },
  {
    "_key": "guid",
    "_type": "block",
    "children": [
      {
        "_key": "guid",
        "_type": "span",
        "marks": [],
        "text": "first level item",
      },
    ],
    "level": 1,
    "listItem": "number",
    "markDefs": [],
    "style": "normal",
  },
  {
    "_key": "guid",
    "_type": "block",
    "children": [
      {
        "_key": "guid",
        "_type": "span",
        "marks": [],
        "text": "second level item",
      },
    ],
    "level": 2,
    "listItem": "number",
    "markDefs": [],
    "style": "normal",
  },
  {
    "_key": "guid",
    "_type": "block",
    "children": [
      {
        "_key": "guid",
        "_type": "span",
        "marks": [
          "strong",
        ],
        "text": "second level item ",
      },
    ],
    "level": 2,
    "listItem": "number",
    "markDefs": [],
    "style": "normal",
  },
]
`;

exports[`portable text transformer transforms nested styles 1`] = `
[
  {
    "_key": "guid",
    "_type": "block",
    "children": [
      {
        "_key": "guid",
        "_type": "span",
        "marks": [
          "strong",
        ],
        "text": "all text is bold and last part is ",
      },
      {
        "_key": "guid",
        "_type": "span",
        "marks": [
          "em",
          "strong",
        ],
        "text": "also italic and this is also ",
      },
      {
        "_key": "guid",
        "_type": "span",
        "marks": [
          "em",
          "strong",
          "sup",
        ],
        "text": "superscript",
      },
    ],
    "markDefs": [],
    "style": "normal",
  },
]
`;

exports[`portable text transformer transforms tables 1`] = `
[
  {
    "_key": "guid",
    "_type": "block",
    "children": [
      {
        "_key": "guid",
        "_type": "span",
        "marks": [],
        "text": "some text and ",
      },
      {
        "_key": "guid",
        "_type": "span",
        "marks": [
          "strong",
        ],
        "text": "strong text",
      },
    ],
    "markDefs": [],
    "style": "normal",
  },
  {
    "_key": "guid",
    "_type": "table",
    "numColumns": 3,
    "rows": [
      {
        "_key": "guid",
        "_type": "row",
        "cells": [
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 2,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "paragraph 1",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "paragraph 2",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "text",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "text",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
        ],
      },
      {
        "_key": "guid",
        "_type": "row",
        "cells": [
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "text",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "text",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "text",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
        ],
      },
      {
        "_key": "guid",
        "_type": "row",
        "cells": [
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "text",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "text",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
          {
            "_key": "guid",
            "_type": "cell",
            "childBlocksCount": 1,
            "content": [
              {
                "_key": "guid",
                "_type": "block",
                "children": [
                  {
                    "_key": "guid",
                    "_type": "span",
                    "marks": [],
                    "text": "text",
                  },
                ],
                "markDefs": [],
                "style": "normal",
              },
            ],
          },
        ],
      },
    ],
  },
]
`;
